crates/rome_formatter/tests/specs/prettier/js/babel-plugins/record-tuple-record.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: record-tuple-record.js

---
# Input
```js
const record1 = #{
    a: 1,
    b: 2,
    c: 3,
};

const record2 = #{...record1, b: 5};

```

# Output
```js
const record1 = #
{
  a: 1, b;
  : 2,
    c: 3,
}

const record2 = #
{
  ...record1, b: 5
}

```

# Errors
```
error[SyntaxError]: expected an identifier but instead found '{'
  ┌─ record-tuple-record.js:1:18
  │
1 │ const record1 = #{
  │                  ^ Expected an identifier here

error[SyntaxError]: Private names are only allowed on the left side of a 'in' expression
  ┌─ record-tuple-record.js:1:17
  │
1 │ const record1 = #{
  │                 ^

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ record-tuple-record.js:1:18
  │
1 │ const record1 = #{
  │ -----------------^ An explicit or implicit semicolon is expected here...
  │ │                 
  │ ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ record-tuple-record.js:3:6
  │  
2 │       a: 1,
  │ ┌────────'
3 │ │     b: 2,
  │ │      ^ An explicit or implicit semicolon is expected here...
  │ └──────' ...Which is required to end this statement

error[SyntaxError]: expected an identifier but instead found '{'
  ┌─ record-tuple-record.js:7:18
  │
7 │ const record2 = #{...record1, b: 5};
  │                  ^ Expected an identifier here

error[SyntaxError]: Private names are only allowed on the left side of a 'in' expression
  ┌─ record-tuple-record.js:7:17
  │
7 │ const record2 = #{...record1, b: 5};
  │                 ^

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ record-tuple-record.js:7:18
  │
7 │ const record2 = #{...record1, b: 5};
  │ -----------------^ An explicit or implicit semicolon is expected here...
  │ │                 
  │ ...Which is required to end this statement

error[SyntaxError]: expected an expression but instead found '...record1, b: 5'
  ┌─ record-tuple-record.js:7:19
  │
7 │ const record2 = #{...record1, b: 5};
  │                   ^^^^^^^^^^^^^^^^ Expected an expression here


```


